@@ -45,6 +45,8 @@ linotp (3.1~0dev-0) experimental; urgency=low
   * getotp view is now working with python3
   * Token validity period (stored in UTC) is now compared against current
     time in UTC instead of the server's timezone.
+  * Log username, realm, serial and token type in audit table when performing a 
+    `validate/check_status` request.
 
  -- KeyIdentity LinOTP Packaging <linotp@keyidentity.com>  Thu, 12 Nov 2020 17:48:51 +0200
 
